--- a/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
+++ b/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
@@ -21,7 +21,7 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition="$(TargetFramework.Equals('netstandard2.0'))">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
