--- a/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
+++ b/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
@@ -13,7 +13,7 @@
     </None>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net6.0'">
+  <ItemGroup Condition="$(TargetFramework.Equals('netcoreapp3.1')) Or $(TargetFramework.Equals('net6.0'))">
     <EmbeddedResource Include="App.config" />
   </ItemGroup>
 
