--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -22,16 +22,16 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
+  <ItemGroup Condition=" $(TargetFramework.Equals('net40')) ">
     <PackageReference Include="Microsoft.Bcl.Async" Version="1.0.168" />
     <PackageReference Include="MrAdvice" Version="2.9.9" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+  <ItemGroup Condition=" $(TargetFramework.Equals('net45')) ">
     <PackageReference Include="MrAdvice" Version="2.9.9" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+  <ItemGroup Condition=" $(TargetFramework.Equals('net461')) ">
     <PackageReference Include="MrAdvice" Version="2.12.0" />
   </ItemGroup>
 
