--- a/src/SD.AOP.LogViewer/SD.AOP.LogViewer.csproj
+++ b/src/SD.AOP.LogViewer/SD.AOP.LogViewer.csproj
@@ -6,7 +6,7 @@
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.Framework - 日志查看器</Description>
-    <Copyright>Copyright © SD 2023</Copyright>
+    <Copyright>Copyright © SD 2024</Copyright>
     <Version>2.0.0</Version>
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
@@ -14,17 +14,12 @@
 
   <ItemGroup>
     <Content Include="favicon.ico" />
-    <Content Include="Content\**">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Installers\Installer.WindowsService.exe">
+    <None Update="Content\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Installers\Installer.WindowsService.xml">
+    <None Update="Installers\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <TargetPath>%(Filename)%(Extension)</TargetPath>
     </None>
   </ItemGroup>
 
@@ -35,7 +30,7 @@
     <PackageReference Include="SD.Toolkits.Recursion" Version="2.1.0" />
     <PackageReference Include="SD.IOC.Core" Version="2.2.3" />
     <PackageReference Include="SD.IOC.Extension.NetCore" Version="1.2.0" />
-    <PackageReference Include="SD.Infrastructure" Version="3.5.8" />
+    <PackageReference Include="SD.Infrastructure" Version="3.6.0" />
   </ItemGroup>
 
   <ItemGroup>
