--- a/src/SD.AOP.Logger.Sqlite/SD.AOP.Logger.Sqlite.csproj
+++ b/src/SD.AOP.Logger.Sqlite/SD.AOP.Logger.Sqlite.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45;net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net461;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - SQLite实现</Description>
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.5" />
-    <PackageReference Include="SD.Toolkits.Sql.Sqlite" Version="1.0.2" />
+    <PackageReference Include="SD.Toolkits.Sql.Sqlite" Version="1.0.6" />
   </ItemGroup>
 
   <ItemGroup>
