--- a/src/SD.AOP.Logger.PostgreSQL/SD.AOP.Logger.PostgreSQL.csproj
+++ b/src/SD.AOP.Logger.PostgreSQL/SD.AOP.Logger.PostgreSQL.csproj
@@ -17,7 +17,7 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.PostgreSQL.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="$(TargetFramework.Equals('net461'))">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
