--- a/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
+++ b/src/SD.AOP.Logger.SqlServer/SD.AOP.Logger.SqlServer.csproj
@@ -17,7 +17,7 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.SqlServer.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="$(TargetFramework.Equals('net40'))">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
