--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45;net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP 面向方面编程基础</Description>
     <Copyright>Copyright © SD 2024</Copyright>
-    <Version>2.3.1</Version>
-    <AssemblyVersion>2.3.1</AssemblyVersion>
-    <FileVersion>2.3.1.0</FileVersion>
+    <Version>2.4.0</Version>
+    <AssemblyVersion>2.4.0</AssemblyVersion>
+    <FileVersion>2.4.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,21 +17,9 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Core.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="$(TargetFramework.Equals('net462'))">
     <Reference Include="System.Configuration" />
     <Reference Include="System.Transactions" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework.Equals('net40'))">
-    <PackageReference Include="Microsoft.Bcl.Async" Version="1.0.168" />
-    <PackageReference Include="MrAdvice" Version="2.9.9" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework.Equals('net45'))">
-    <PackageReference Include="MrAdvice" Version="2.9.9" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework.Equals('net461'))">
     <PackageReference Include="MrAdvice" Version="2.16.0" />
   </ItemGroup>
 
