--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -8,16 +8,14 @@
   <!--SD.AOP配置-->
   <sd.aop>
     <!--日志记录者-->
-    <!--<loggerProvider type="SD.AOP.SqlServerLogger" assembly="SD.AOP.Logger.SqlServer" />-->
+    <loggerProvider type="SD.AOP.SqlServerLogger" assembly="SD.AOP.Logger.SqlServer" />
     <!--<loggerProvider type="SD.AOP.MySqlLogger" assembly="SD.AOP.Logger.MySql" />-->
     <!--<loggerProvider type="SD.AOP.PgSqlLogger" assembly="SD.AOP.Logger.PostgreSQL" />-->
-    <!--<loggerProvider type="SD.AOP.FbSqlLogger" assembly="SD.AOP.Logger.Firebird" />-->
-    <loggerProvider type="SD.AOP.SqliteLogger" assembly="SD.AOP.Logger.Sqlite" />
+    <!--<loggerProvider type="SD.AOP.SqliteLogger" assembly="SD.AOP.Logger.Sqlite" />-->
     <!--连接字符串-->
-    <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=broadmall123!;MultipleActiveResultSets=true;TrustServerCertificate=true;" />-->
+    <connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=shimada123!;MultipleActiveResultSets=true;TrustServerCertificate=true;" />
     <!--<connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />-->
     <!--<connectionString value="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />-->
-    <!--<connectionString value="Data Source=.;Initial Catalog=|DataDirectory|REMOTEDB.FDB;User=sysdba;Password=masterkey;Character Set=utf8;Server Type=Embedded;Client Library=Firebird/fbclient.dll;" />-->
-    <connectionString value="Data Source=App_Data/RemoteDB.db3" />
+    <!--<connectionString value="Data Source=App_Data/RemoteDB.db3" />-->
   </sd.aop>
 </configuration>
