--- a/src/SD.AOP.Logger.MySql/SD.AOP.Logger.MySql.csproj
+++ b/src/SD.AOP.Logger.MySql/SD.AOP.Logger.MySql.csproj
@@ -5,9 +5,9 @@
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - MySQL实现</Description>
     <Copyright>Copyright © SD 2024</Copyright>
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+    <Version>2.4.0</Version>
+    <AssemblyVersion>2.4.0</AssemblyVersion>
+    <FileVersion>2.4.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,17 +17,17 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.MySql.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="$(TargetFramework.Equals('net462'))">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
   <ItemGroup Condition="$(TargetFramework.Equals('netstandard2.0'))">
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SD.Toolkits.Sql" Version="1.0.5" />
-    <PackageReference Include="SD.Toolkits.Sql.MySql" Version="1.0.6" />
+    <PackageReference Include="SD.Toolkits.Sql" Version="1.1.0" />
+    <PackageReference Include="SD.Toolkits.Sql.MySql" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
